bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:5: error: type mismatch;
 found   : Unit
 required: Int
    return 
    ^Diff21:7: error: Int.type does not take parameters
  return Int((21-n)*2)
            ^