bat.bool1.diff21.Diff21.scala.code
def diff21(n:Int): Int = {
  
  if (n > 21) {
    return 
  }
  return Int((21-n)*2)
  
}